# Karyo-Agent

./: README.md  agent.py  output1.txt  pyproject.toml
cache/: cache.db  cache.db-shm
docs/: architecture.md  submission_checklist.md  submission_doc.md  video_script.md
karyo/: __init__.py  crew.py
karyo-agent/: .env.example  .gitignore
karyo-agent/karyo/: crew.py
karyo-agent/karyo/agents/: scorer.py
karyo-agent/karyo/models/: schemas.py
karyo-agent/karyo/tools/: places.py  website.py  whois_tool.py
karyo-agent/karyo/ui/: __init__.py  console.py
karyo-agent/prompts/: copywriter.md  manager.md  researcher.md
karyo/agents/: __init__.py  copywriter.py  manager.py  researcher.py  scorer.py
karyo/cache/: __init__.py  store.py
karyo/models/: __init__.py
karyo/tools/: __init__.py  places.py  website.py
karyo/ui/: __init__.py  console.py
outputs/: leads.csv  run_log.json
outputs/emails/: devaki_dental_clinic.txt  dr_paul_s_dental_healthcare.txt  mascot_speciality_dental_clinic.txt  remuka_deltal_clinic.txt  smile_dental_clinic.txt  supriya_dental_clinic.txt
prompts/: copywriter.md  scorer.md
scripts/: test_places.py
tests/: smoke_test.py
